--- a/src/templates/pages/best-practics.html
+++ b/src/templates/pages/best-practics.html
@@ -6,15 +6,14 @@
             {% include 'breadcrumbs/breadcrumbs.html' %}
         </div>
     </div>
-    <div class="row ">
-        <div class="col-12">
-            <div class="main-header">
-                <h1>Лучшие практики</h1>
+    <section class="practices">
+        <div class="row ">
+            <div class="col-12">
+                <div class="main-header">
+                    <h1>Лучшие практики</h1>
+                </div>
             </div>
         </div>
-
-    </div>
-    <section class="practices">
         <div class="row">
             <div class="col-12 ">
                 <div class="practices__widget">
@@ -36,14 +35,14 @@
         </div>
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-6">
                 <a href="/" class="card">
                     <picture class="card-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
-                        <source srcset="img/01-d.webp" type="image/webp">
+                        <source srcset="img/01-m.svg" media="(max-width: 1022px)">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/01-d.png" title="" alt="...">
+                        <img src="img/01-d.svg" title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -53,14 +52,14 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-6">
                 <a href="/" class="card">
                     <picture class="card-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
-                        <source srcset="img/02-d.webp" type="image/webp">
+                        <source srcset="img/02-m.svg" media="(max-width: 1022px)">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/02-d.png" title="" alt="...">
+                        <img src="img/02-d.svg" title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -70,14 +69,14 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-6">
                 <a href="/" class="card">
                     <picture class="card-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
-                        <source srcset="img/03-d.webp" type="image/webp">
+                        <source srcset="img/03-m.svg" media="(max-width: 1022px)">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/03-d.png" title="" alt="...">
+                        <img src="img/03-d.svg" title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -98,14 +97,14 @@
         </div>
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-6">
                 <a href="/" class="card">
                     <picture class="card-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
-                        <source srcset="img/04-d.webp" type="image/webp">
+                        <source srcset="img/04-m.svg" media="(max-width: 1022px)">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/04-d.png" title="" alt="...">
+                        <img src="img/04-d.svg" title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -115,14 +114,14 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-6">
                 <a href="/" class="card">
                     <picture class="card-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
-                        <source srcset="img/05-d.webp" type="image/webp">
+                        <source srcset="img/05-m.svg" media="(max-width: 1022px)">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/05-d.png" title="" alt="...">
+                        <img src="img/05-d.svg" title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -132,14 +131,14 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-6">
                 <a href="/" class="card">
                     <picture class="card-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
-                        <source srcset="img/06-d.webp" type="image/webp">
+                        <source srcset="img/06-m.svg" media="(max-width: 1022px)">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/06-d.png" title="" alt="...">
+                        <img src="img/06-d.svg" title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -152,7 +151,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-6">
                 <div class="header-block">
                     <h2>Видео</h2>
                 </div>
@@ -160,9 +159,9 @@
                     <picture class="card-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
-                        <source srcset="img/07-d.webp" type="image/webp">
+                        <source srcset="img/07-m.svg" media="(max-width: 1022px)">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/07-d.png" title="" alt="...">
+                        <img src="img/07-d.svg" title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
@@ -173,7 +172,7 @@
                 </a>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-6">
                 <div class="header-block">
                     <h2>Абсурды</h2>
                 </div>
@@ -181,9 +180,9 @@
                     <picture class="card-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
-                        <source srcset="img/08-d.webp" type="image/webp">
+                        <source srcset="img/08-m.svg" media="(max-width: 1022px)">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/08-d.png" title="" alt="...">
+                        <img src="img/08-d.svg" title="" alt="...">
                     </picture>
                     <div class="card-body">
                         <h5 class="card-title">Лучшие в металлургии</h5>
