--- a/src/blocks/modules/breadcrumbs/breadcrumbs.scss
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs.scss
@@ -9,6 +9,19 @@
     border-radius: 0;
     list-style: none;
 
+    &--pc{
+        @media (max-width: $media-lg){
+            display: none;
+        }
+    }
+    &--mob{
+        display: block;
+        padding: 20px 0;
+        @media (min-width: $media-lg--min){
+            display: none;
+        }
+    }
+
 
     &-item {
         margin-right: rem(42);
@@ -33,6 +46,26 @@
             &:before {
                 display: none;
             }
+        }
+    }
+
+
+    &-prev {
+        font-size: rem(16);
+        line-height: 1.25;
+        color: $text-silver;
+        padding-left: 24px;
+        position: relative;
+        &:before {
+            position: absolute;
+            content: '';
+            left: 0;
+            top: 0;
+            width: 24px;
+            height: 24px;
+            background-image: url(../img/icon--breadcrumb-mob.svg);
+            background-position: center;
+            background-size: contain;
         }
     }
 }
