--- a/src/blocks/modules/card/card.scss
+++ b/src/blocks/modules/card/card.scss
@@ -484,6 +484,7 @@
     &:hover {
         transform: translateY(-8px);
         text-decoration: none;
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.05);
     }
 
     &__header {
