--- a/src/styles/pages/news.scss
+++ b/src/styles/pages/news.scss
@@ -225,6 +225,8 @@
         .swiper-container {
             margin-top: -8px;
             padding-top: 8px;
+            margin-bottom: -8px;
+            padding-bottom: 8px;
             @media(max-width: 758px) {
                 padding-left: 16px;
                 margin-left: -16px;
