--- a/src/templates/pages/ps-main.html
+++ b/src/templates/pages/ps-main.html
@@ -1,6 +1,6 @@
 {% extends './layout.html' %}
 {% block content %}
-<div class="wrapper">
+<div class="wrapper psystem">
     <div class="row">
         <div class="col-12">
             {% include 'breadcrumbs/breadcrumbs.html' %}
@@ -11,6 +11,69 @@
            <h1>Производственная система</h1>
         </div>
         <p class="col-md-10">У нас крутая производственная система с еженедельными обходами и лучшими практиками. Смотрите сами!</p>
+    </div>
+    <div class="row news__row">
+        <div class="col-12">
+            <button type="button" class="results-nav__filters-btn js-results-nav__filters-btn">
+                <span class="icon"></span>
+                <span class="text">Фильтры</span>
+                <span class="count">2</span>
+            </button>
+            <div class="results-nav">
+                <form action="" class="sorting-form">
+                    <div class="results-nav__selects js-results-nav__selects">
+                        <div class="top">
+                            <div class="top-header">
+                                <div class="name">Фильтры</div>
+                            </div>
+                            <button type="button" class="top-close js-top-close"></button>
+                        </div>
+
+                        <div class="bottom">
+
+                            <div class="selects">
+                                <div class="results-nav__select js-results-nav__select">
+                                    <div class="mobile-title">Площадка</div>
+                                    <select name="" id="" class="selectpicker sorting-form__select select-js">
+                                        <option value="">Все площадки</option>
+                                        <option value="">Альметьевск</option>
+                                        <option value="">Москва</option>
+                                        <option value="">Челябинск</option>
+                                        <option value="">Уфа</option>
+                                        <option value="">Благовещенск</option>
+                                        <option value="">Чусовой</option>
+                                        <option value="">Выкса</option>
+                                    </select>
+                                </div>
+                                <div class="results-nav__select js-results-nav__select">
+                                    <div class="mobile-title">Дата</div>
+                                    <div class="data-select">
+                                        <button class="data-select__btn btn datapicker-trigger-js" type="button">
+                                            Дата
+                                        </button>
+                                        <div class="data-select__result ">
+                                            <input type="text" hidden readonly
+                                                   class="date-select__input datapicker-result-js">
+                                            <div class="data-select__fake-input datapicker-fake-js"></div>
+                                            <button type="button"
+                                                    class="data-select__clear btn datapicker-clear-js"></button>
+                                        </div>
+                                        <div class="data-select__dropdown">
+                                            <div class="data-select__item datapicker-js"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="buttons">
+                                <button type="submit" class="btn btn--primary">Применить</button>
+                                <a href="" class="btn btn--secondary">Сбросить фильтры</a>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
     <section class="detours">
@@ -541,9 +604,9 @@
                     <picture class="ps-links__item-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
-                        <source srcset="img/1360x695_Toyota_2020.webp" type="image/webp">
+                        <source srcset="img/metodologi.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/1360x695_Toyota_2020.jpg" title="Лучшие в металлургии"
+                        <img src="img/metodologi.png" title="Лучшие в металлургии"
                              alt="Лучшие в металлургии">
                     </picture>
                     <div class="ps-links__item-name">Методология</div>
@@ -554,9 +617,9 @@
                     <picture class="ps-links__item-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
-                        <source srcset="img/1360x695_Toyota_2020.webp" type="image/webp">
+                        <source srcset="img/project.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/1360x695_Toyota_2020.jpg" title="Лучшие в металлургии"
+                        <img src="img/project.png" title="Лучшие в металлургии"
                              alt="Лучшие в металлургии">
                     </picture>
                     <div class="ps-links__item-name">Проекты</div>
@@ -567,9 +630,9 @@
                     <picture class="ps-links__item-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
-                        <source srcset="img/1360x695_Toyota_2020.webp" type="image/webp">
+                        <source srcset="img/rating-evolution.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/1360x695_Toyota_2020.jpg" title="Лучшие в металлургии"
+                        <img src="img/rating-evolution.png" title="Лучшие в металлургии"
                              alt="Лучшие в металлургии">
                     </picture>
                     <div class="ps-links__item-name">Рейтинг развития</div>
