--- a/src/templates/pages/ps-main.html
+++ b/src/templates/pages/ps-main.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row main-header">
         <div class="col-12">
-           <h1>Производственная система</h1>
+           <h1>Производствен&shy;ная система</h1>
         </div>
         <p class="col-md-10">У нас крутая производственная система с еженедельными обходами и лучшими практиками. Смотрите сами!</p>
     </div>
@@ -80,7 +80,7 @@
         <div class="row header-block">
             <h2>Обходы</h2>
             <div class="header-block__btn">
-                <a href="obhod.html" class="btn">Все обходы <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
+                <a href="obhod.html" class="btn">Все <span>обходы</span> <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
             </div>
         </div>
         <div class="row detours__row">
@@ -441,7 +441,7 @@
             <div class="col-12">
                 <h2>Лучшие практики</h2>
                 <div class="header-block__btn">
-                    <a href=#0" class="btn">Смотреть все <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
+                    <a href=#0" class="btn"><span>Смотреть</span> все <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
                 </div>
             </div>
         </div>
