--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -27,3 +27,4 @@
 @import 'modules/ads-modals-add/ads-modals-add';
 @import 'modules/ads-modals-remove/ads-modals-remove';
 @import 'modules/gallaryPopup-ads/gallaryPopup-ads';
+ @import 'modules/calendar/calendar';
