end responsive ps security.html

--- a/src/templates/pages/security.html
+++ b/src/templates/pages/security.html
@@ -7,7 +7,7 @@
         </div>
 
     </div>
-    <div class="row main-header">
+    <div class="row main-heade main-header--practices">
         <div class="col-12">
             <h1>Безопасность</h1>
         </div>
