--- a/src/blocks/modules/calendar/calendar.scss
+++ b/src/blocks/modules/calendar/calendar.scss
@@ -1,129 +1,123 @@
 .calendar {
-	border: 1px solid $border-10;
-	border-radius: 5px;
-	display: block;
-	min-width: 280px;
-	width: 100%;
+    display: block;
+    width: 100%;
+    min-width: 280px;
+    border: 1px solid $border-10;
+    border-radius: 5px;
 
-	.calendar-nav {
-		align-items: center;
-		background: $white;
-		border-top-left-radius: 5px;
-		border-top-right-radius: 5px;
-		display: flex;
-		justify-content: space-between;
-		font-size: rem(24);
-		font-weight: $font-weight-bold;
-		line-height: 1.33;
-		color: #1a1a1a;
-		padding: 24px;
+    .calendar-nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 24px;
+        background: $white;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        font-size: rem(24);
+        font-weight: $font-weight-bold;
+        line-height: 1.33;
+        color: #1a1a1a;
+    }
 
-	}
+    .calendar-header, .calendar-body {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
 
-	.calendar-header,
-	.calendar-body {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
+        .calendar-date {
+            flex: 0 0 14.28%; // 7 calendar-items each row
+            max-width: 14.28%;
+        }
+    }
 
-		.calendar-date {
-			flex: 0 0 14.28%; // 7 calendar-items each row
-			max-width: 14.28%;
-		}
-	}
+    .calendar-header {
+        background: $white;
+        border-bottom: 1px solid $border-10;
+        font-size: rem(16);
+        line-height: 1.25;
+        color: $text-silver;
+        text-align: center;
+        padding-bottom: 16px;
+    }
 
-	.calendar-header {
-		background: $white;
-		border-bottom: 1px solid $border-10;
-		font-size: rem(16);
-		line-height: 1.25;
-		color: $text-silver;
-		text-align: center;
-		padding-bottom: 16px;
-	}
+    .calendar-body {
+        color: $text-black;
+    }
 
-	.calendar-body {
-		color: $text-black;
-	}
+    .calendar-date {
+        border: 0;
 
-	.calendar-date {
-		border: 0;
+        .date-item {
+            position: relative;
+            width: 32px;
+            height: 32px;
+            border: 1px solid transparent;
+            padding: .1rem;
+            transition: background .2s, border .2s, box-shadow .2s, color .2s;
+            appearance: none;
+            background: 0 0;
+            border-radius: 50%;
+            color: $text-black;
+            cursor: pointer;
+            font-size: rem(16);
+            line-height: 1.25;
+            outline: 0;
+            text-align: center;
+            text-decoration: none;
+            vertical-align: middle;
+            white-space: nowrap;
 
-		.date-item {
-			appearance: none;
-			background: 0 0;
-			border: 1px solid transparent;
-			border-radius: 50%;
-			color: $text-black;
-			cursor: pointer;
-			font-size: rem(16);
-			height: 32px;
-			line-height: 1.25;
-			outline: 0;
-			padding: .1rem;
-			position: relative;
-			text-align: center;
-			text-decoration: none;
-			transition: background .2s, border .2s,box-shadow .2s, color .2s;
-			vertical-align: middle;
-			white-space: nowrap;
-			width: 32px;
+            &.date-today {
+                border-color: $border-10;
+                color: $text-black;
+            }
 
-			&.date-today {
-				border-color: $border-10;
-				color: $text-black;
-			}
+            //&:focus {
+            //	border-color: $coral;
+            //	color: $coral;
+            //}
+            ////
+            ////&:focus,
+            ////&:hover {
+            ////	background: $secondary-color-light;
+            ////	border-color: $secondary-color-dark;
+            ////	color: $primary-color;
+            ////	text-decoration: none;
+            ////}
+            //&:active,
+            //&.active {
+            //	background: $primary-color-dark;
+            //	border-color: darken($primary-color-dark, 5%);
+            //	color: $light-color;
+            //}
+            //
+            //// Calendar badge support
+            //&.badge {
+            //	&::after {
+            //		position: absolute;
+            //		top: 3px;
+            //		right: 3px;
+            //		transform: translate(50%, -50%);
+            //	}
+            //}
+        }
 
-			//&:focus {
-			//	border-color: $coral;
-			//	color: $coral;
-			//}
-			////
-			////&:focus,
-			////&:hover {
-			////	background: $secondary-color-light;
-			////	border-color: $secondary-color-dark;
-			////	color: $primary-color;
-			////	text-decoration: none;
-			////}
-			//&:active,
-			//&.active {
-			//	background: $primary-color-dark;
-			//	border-color: darken($primary-color-dark, 5%);
-			//	color: $light-color;
-			//}
-			//
-			//// Calendar badge support
-			//&.badge {
-			//	&::after {
-			//		position: absolute;
-			//		top: 3px;
-			//		right: 3px;
-			//		transform: translate(50%, -50%);
-			//	}
-			//}
-		}
+        .date-item, .calendar-event {
+            &:disabled, &.disabled {
+                cursor: default;
+                opacity: .25;
+                pointer-events: none;
+            }
+        }
 
-		.date-item,
-		.calendar-event {
-			&:disabled,
-			&.disabled {
-				cursor: default;
-				opacity: .25;
-				pointer-events: none;
-			}
-		}
+        &.prev-month, &.next-month {
+            .date-item, .calendar-event {
+                opacity: .25;
+            }
+        }
+    }
 
-		&.prev-month,
-		&.next-month {
-			.date-item,
-			.calendar-event {
-				opacity: .25;
-			}
-		}
-	}
-
-	/*.calendar-range {
+    /*.calendar-range {
 		position: relative;
 
 		&::before {
